# energy-monitor

./: Cargo.toml  kapacitor.conf
.cargo/: config
src/: data.rs  lib.rs  main.rs  ser.rs
web/: today.html
web/css/: style.css
web/js/: graphs.js
